fixes issue with logo alignment in dashboard

--- a/app/assets/stylesheets/landing_style.scss
+++ b/app/assets/stylesheets/landing_style.scss
@@ -6,6 +6,10 @@
 	padding: 2em 0;
 }
 
+#fh5co-our-services{
+	padding-top: 7em 0;
+}
+
 /*Carousel-Images*/
 #c1{
 	background: image-url('c1.jpg');
